# Computer-Networks-Project-2

./: .gitignore  CMakeLists.txt  accepted_player_container.cpp  accepted_player_container.h  accepted_player_container_test.cpp  client.cpp  config.h  connection_acceptor.cpp  connection_acceptor.h  game.cpp  game.h  lobby.cpp  lobby.h  makefile  message_manager.cpp  message_manager.h  messages.cpp  messages.h  move_container.cpp  move_container.h  network_handler.cpp  network_handler.h  parser.cpp  parser.h  readme  serializer.cpp  serializer.h  server.cpp  turn_container.cpp  turn_container.h
src/: client.cpp  server.cpp
src/concurrency/: accepted_player_container.cpp  accepted_player_container.h  move_container.cpp  move_container.h  turn_container.cpp  turn_container.h
src/config/: config.h  parser.cpp  parser.h
src/game_logic/: game.cpp  game.h  lobby.cpp  lobby.h
src/network/: connection_acceptor.cpp  connection_acceptor.h  message_manager.cpp  message_manager.h  messages.cpp  messages.h  network_handler.cpp  network_handler.h
src/test/: accepted_player_container_test.cpp
